# docs/api.yml
@@ -222,6 +222,42 @@ paths:
                     type: string
                     example: 'Product not found'
                 type: object
+  /:
+    get:
+      tags:
+        - Status
+      summary: 'Verifica o status da API'
+      description: 'Retorna informações sobre a conexão com o banco de dados, uptime, uso de memória e última execução do cron job.'
+      operationId: getApiStatus
+      responses:
+        200:
+          description: 'Resposta de sucesso'
+          content:
+            application/json:
+              schema:
+                properties:
+                  message:
+                    type: string
+                    example: 'Products API'
+                  status:
+                    type: string
+                    example: Connected
+                  version:
+                    type: string
+                    example: 1.0.0
+                  db_connection:
+                    type: string
+                    example: OK
+                  last_cron_run:
+                    type: string
+                    example: '2025-03-23 14:00:00 | Time Zone: UTC'
+                  uptime:
+                    type: string
+                    example: '0.23 min'
+                  memory_usage:
+                    type: string
+                    example: '12.45 MB'
+                type: object
 components:
   schemas:
     Product:
@@ -310,3 +346,6 @@ tags:
   -
     name: Products
     description: Products
+  -
+    name: Status
+    description: Status
